# FoodBlock

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DISTRIBUTION.md  README.md  glama.json
.aws/: SETUP.md  task-definition.json
.github/workflows/: test.yml
agent/: node.js
cli/: package-lock.json  package.json
gemini/: README.md  tools.json
mcp/: .npmignore  LICENSE  README.md  package-lock.json  package.json  seed.cjs  server.js  server.json  smithery.yaml  store.js  test-agent-flow.sh  test-draft-approve.cjs  test-tool.sh
mcp/test/: mcp.test.js
openai/: GPT_SETUP.md  openapi.yaml  tools.json
sandbox/: seed.js  server.js
sdk/go/: agent.go  alias.go  alias_test.go  attestation.go  attestation_test.go  encrypt.go  encrypt_test.go  explain.go  fb.go  (+29 more)
sdk/python/: LICENSE  README.md  pyproject.toml  setup.py
sdk/python/foodblock/: __init__.py  agent.py  alias.py  attestation.py  block.py  canonical.py  chain.py  encrypt.py  explain.py  fb.py  federation.py  forward.py  merge.py  merkle.py  notation.py  offline.py  query.py  seed.py  snapshot.py  template.py  tombstone.py  trust.py  uri.py  validate.py  verify.py  vocabulary.py
sdk/python/tests/: test_advanced_modules.py  test_agent.py  test_block.py  test_fb.py  test_fixes.py  test_forward.py  test_forward_vocab.py  test_trust_seed.py
server/: Dockerfile  db.js  docker-compose.yml  index.js  logger.js  package-lock.json  package.json  pagination.js
spec/: implementation-paper.md  technical-whitepaper.md  whitepaper-style.css  whitepaper.md
sql/: schema.sql
test/: generate-vectors.js  vectors.json
(+640 files in other folders)
