[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foodblock"
version = "0.5.0"
description = "SDK for the FoodBlock protocol — a content-addressable primitive for universal food data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "FoodX", email = "developers@foodx.com"}]
dependencies = ["cryptography>=41.0.0"]
keywords = ["food", "foodblock", "protocol", "traceability", "provenance", "supply-chain"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://www.foodx.world/developers"
Documentation = "https://www.foodx.world/developers"
Source = "https://github.com/FoodXDevelopment/foodblock"

[tool.setuptools.packages.find]
include = ["foodblock*"]
